# notepad

./: .gitignore  Cargo.toml  README.md
migrations/: 001_initial.sql
src/: main.rs  message.rs
src/app/: mod.rs  tree_ops.rs  update.rs
src/db/: connection.rs  folder.rs  image.rs  migration.rs  mod.rs  note.rs
src/model/: folder.rs  image.rs  mod.rs  note.rs
src/ui/: editor.rs  error_banner.rs  image_picker.rs  md_shortcut.rs  md_viewer.rs  mod.rs  search_highlight.rs  sidebar.rs  status_bar.rs  toolbar.rs  tree_node.rs  welcome.rs
src/util/: desktop.rs  id.rs  mod.rs
